--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,28 @@
 language: php
+
+# Build only commits on master and release tags for the "Build pushed branches" feature.
+# This prevents building twice on PRs originating from our repo ("Build pushed pull requests)".
+# See:
+#   - https://github.com/travis-ci/travis-ci/issues/1147
+#   - https://docs.travis-ci.com/user/pull-requests/#double-builds-on-pull-requests
+branches:
+  only:
+    - master
+    - /v[0-9]+\.[0-9]+\.[0-9]+(-.*)?$/
+
+dist: trusty
+
 php:
-  - 5.6
-  - 5.5
-  - 5.4
+  - '7.2'
 
 env:
-  - NETTE_VERSION="~2.0.0"
-  - NETTE_VERSION="~2.1.0"
-  - NETTE_VERSION="~2.2.0"
+  - NETTE_VERSION="~2.4"
+  - NETTE_VERSION="~3.0"
   - NETTE_VERSION="dev-master"
 
 before_script:
   - composer self-update
   - ./changeNetteVersion.sh ${NETTE_VERSION}
-  - composer install --dev --no-interaction --prefer-dist
+  - composer install --no-interaction --prefer-dist
 
 script: ./vendor/bin/tester tests
