--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,13 @@
 	"keywords":["date", "form", "calendar", "input", "Nette"],
 	"license": "BSD-3-Clause",
 	"require": {
-		"php": ">=5.3.0",
-		"nette/nette": "~2.0"
+		"php": ">=7.2.0",
+		"nette/forms": "~2.4|~3.0"
 	},
 	"autoload": {
 		"psr-4": {"Vodacek\\Forms\\Controls\\" : "src"}
 	},
 	"require-dev": {
-		"nette/tester": "~1.0.0"
+		"nette/tester": "~1.7.2"
 	}
 }
